environment/apicurio/2.1.5/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-apicurioregistry-kafkasql-service
  namespace: kafka
  labels:
    apicur.io/name: my-apicurioregistry-kafkasql
    apicur.io/type: apicurio-registry
    apicur.io/version: 2.1.5.Final
    app: my-apicurioregistry-kafkasql
    app.kubernetes.io/instance: my-apicurioregistry-kafkasql
    app.kubernetes.io/name: apicurio-registry
    app.kubernetes.io/version: 2.1.5.Final
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: my-apicurioregistry-kafkasql
  type: ClusterIP
  sessionAffinity: None
