environment/apicurio/2.1.5/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-apicurioregistry-kafkasql-service
  namespace: kafka
  labels:
    apicur.io/name: my-apicurioregistry-kafkasql
    apicur.io/type: apicurio-registry
    apicur.io/version: 2.1.5.Final
    app: my-apicurioregistry-kafkasql
    app.kubernetes.io/instance: my-apicurioregistry-kafkasql
    app.kubernetes.io/name: apicurio-registry
    app.kubernetes.io/version: 2.1.5.Final
spec:
  path: /
  to:
    kind: Service
    name: my-apicurioregistry-kafkasql-service
  port:
    targetPort: 8080
